feat(assets): bundle Bedrock Realm UI artwork
Package the static Realm, Timeline, stats, achievements, and event images used by the mod so rendering no longer depends on a separate Bedrock installation. Keep live account and Realm images on their existing service-backed paths.